fix: alignment issue in ticket (#10169)

--- a/apps/helpdesk/src/pages/common/utils/labels.less
+++ b/apps/helpdesk/src/pages/common/utils/labels.less
@@ -4,19 +4,17 @@
     .AgentLabel,
     .TeamLabel {
         display: inline-flex;
-        align-items: baseline;
+        align-items: center;
         max-width: 100%;
         max-height: 100%;
 
         .avatar {
             margin-right: 8px;
             height: 26px;
-            align-self: center;
         }
 
         .agentIcon {
             margin-right: 4px;
-            align-self: center;
         }
 
         .name {
